fixed bugs on mobile view

--- a/lms/static/sass/_const.scss
+++ b/lms/static/sass/_const.scss
@@ -9,9 +9,9 @@ $dropdown-menu-link-color: #009be0;
 $dropdown-menu-link-color-hover: lighten($dropdown-menu-link-color, 20%);
 //settings for hamburger
 $hamburger-color: #009be0;
-$hamburger-width: 40px;
-$hamburger-height: 30px;
-$hamburger-height-line: 3px;
+$hamburger-width: 30px;
+$hamburger-height: 20px;
+$hamburger-height-line: 5px;
 //settings on promo box
 $promo-box-text-color: #fff;
 $promo-box-text-shadow: 0px 2px 0px rgba(77, 77, 77, 0.4);
