--- a/lms/static/sass/blocks/_dashboard.scss
+++ b/lms/static/sass/blocks/_dashboard.scss
@@ -1,30 +1,55 @@
 .dashboard {
 	.main-container {
 		padding: 40px 20px 40px 0;
+		@media screen and (max-width: 991px){
+			padding: 30px 0;
+			order: 2;
+		}
 	}
 	.side-container {
 		padding: 40px 0 40px 20px;
+		@media screen and (max-width: 991px){
+			padding: 30px 0 0;
+			margin: 0;
+			order: 1;
+		}
 	}
 }
 
-.dashboard .main-container .my-courses .course .details .enter-course {
-	transition: all 0.2s ease;
-	display: inline-block;
-	background: $theme-btn-white-bg !important;
-	color: $theme-btn-white-text-color !important;
-	border: 1px solid $theme-btn-white-border;
-	text-transform: uppercase;
-	border-radius: 0 !important;
-	&:active,
-	&:focus {
+.dashboard .main-container .my-courses .course .details {
+	.enter-course {
+		transition: all 0.2s ease;
+		display: inline-block;
 		background: $theme-btn-white-bg !important;
+		color: $theme-btn-white-text-color !important;
+		border: 1px solid $theme-btn-white-border;
+		text-transform: uppercase;
+		border-radius: 0 !important;
+		&:active,
+		&:focus {
+			background: $theme-btn-white-bg !important;
+		}
+		&:focus:hover {
+			background: $theme-btn-white-bg-hover !important;
+		}
+		&:hover {
+			background: $theme-btn-white-bg-hover !important;
+			color: $theme-btn-white-text-color-hover !important;
+		}
 	}
-	&:focus:hover {
-		background: $theme-btn-white-bg-hover !important;
-	}
-	&:hover {
-		background: $theme-btn-white-bg-hover !important;
-		color: $theme-btn-white-text-color-hover !important;
+
+	.wrapper-course-details {
+
+		.course-info,
+		.wrapper-course-actions {
+
+			.wrapper-action-more,
+			.entitlement-actions-wrapper{
+				@media screen and (max-width: 767px){
+					padding-top: 0;
+				}
+			}
+		}
 	}
 }
 
